--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,12 +13,12 @@ endif()
 
 project(Editor)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /MP /cgthreads8")
 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /CGTHREADS:8 /INCREMENTAL:NO")
 
 set(CMAKE_CXX_FLAGS_DEBUG "/JMC /Od /Z7 /MDd")
 
-set(CMAKE_CXX_FLAGS_RELEASE "/O2 /GS- /guard:cf /D NDEBUG /JMC- /GL /Ob3 /MD /cgthreads8")
+set(CMAKE_CXX_FLAGS_RELEASE "/O2 /GS- /guard:cf /D NDEBUG /JMC- /GL /Ob3 /MD")
 set(CMAKE_EXE_LINKER_FLAGS_RELEASE "/OPT:REF /OPT:ICF=10000 /LTCG")
 
 set(CMAKE_CXX_STANDARD 17)
